[gd_scene load_steps=3 format=3 uid="uid://m8oprnrkwfr2"]

[ext_resource type="Script" uid="uid://bcf78bedm18b6" path="res://audio_graph/graph_edit_nodes/audio_function_generator.gd" id="1_0ftbn"]
[ext_resource type="Script" uid="uid://d0oca172jemxl" path="res://audio_graph/function_plotter.gd" id="2_unrnq"]

[node name="AudioFunctionGenerator" type="GraphNode"]
offset_right = 256.0
offset_bottom = 320.0
title = "Function Generator"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color(0, 1, 0, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 2
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 2
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_0ftbn")

[node name="AudioFunctionOut" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="AudioFunctionOut"]
layout_mode = 2

[node name="Control" type="Control" parent="AudioFunctionOut/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="FunctionPlotter" type="Control" parent="AudioFunctionOut/VBoxContainer/Control"]
custom_minimum_size = Vector2(0, 100)
anchors_preset = 0
offset_right = 200.0
offset_bottom = 100.0
script = ExtResource("2_unrnq")
metadata/_custom_type_script = "uid://d0oca172jemxl"

[node name="FunctionTypeOption" type="OptionButton" parent="AudioFunctionOut/VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Sine"
popup/item_0/id = 0
popup/item_1/text = "Square"
popup/item_1/id = 1
popup/item_2/text = "Sawtooth"
popup/item_2/id = 2

[node name="FunctionFrequencyIn" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="FunctionFrequencyIn"]
layout_mode = 2
text = "Frequency (hz)"

[node name="SpinBox" type="SpinBox" parent="FunctionFrequencyIn"]
layout_mode = 2
max_value = 44100.0
step = 0.1

[node name="HSlider" type="HSlider" parent="FunctionFrequencyIn"]
layout_mode = 2
max_value = 44100.0

[node name="FunctionAmplitudeIn" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="FunctionAmplitudeIn"]
layout_mode = 2
text = "Amplitude"

[node name="SpinBox" type="SpinBox" parent="FunctionAmplitudeIn"]
layout_mode = 2
min_value = -4.0
max_value = 4.0
step = 0.01

[node name="HSlider" type="HSlider" parent="FunctionAmplitudeIn"]
layout_mode = 2
min_value = -4.0
max_value = 4.0
step = 0.01

[node name="FunctionOffsetIn" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="FunctionOffsetIn"]
layout_mode = 2
text = "Offset"

[node name="SpinBox" type="SpinBox" parent="FunctionOffsetIn"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="HSlider" type="HSlider" parent="FunctionOffsetIn"]
layout_mode = 2
max_value = 1.0
step = 0.001
